--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
             "email": "cjko.audio@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "symfony/routing": "^5.3",
+        "symfony/http-foundation": "^5.3"
+    }
 }
